--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,13 @@ add_subdirectory (libs/recordLib)
 include_directories ("${PROJECT_SOURCE_DIR}/libs/udpBroadcast")
 add_subdirectory (libs/udpBroadcast) 
 
+include_directories ("${PROJECT_SOURCE_DIR}/libs/tcpServer")
+add_subdirectory (libs/tcpServer)
+
 include_directories("${PROJECT_SOURCE_DIR}/include")
 include_directories("${PROJECT_SOURCE_DIR}/libs")
 
 file(GLOB SOURCES "include/*.h" "src/*.cpp")
 
 add_executable (main ${SOURCES})
-target_link_libraries (main libv4l2cpp udpClient tcpClient performanceLib recordLib udpBroadcast)
+target_link_libraries (main libv4l2cpp udpClient tcpClient performanceLib recordLib udpBroadcast tcpServer)
